2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/pitivi.py:
	Remove dependency on gtk
	Make subclass for Interactive pitivi
	Use pure python properties
	Clean up code and add comments
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/mainwindow.py:
	* tests/test_basic.py:
	* tests/test_file_load_save.py:
	Adapt code for modifications in pitivi.py

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/source.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/viewer.py:
	* tests/common.py:
	Convert pitivi,bin,discoverer,objectfactory to gobject-less signaling
	and properties.
	Modify all code using that accordingly.

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* docs/HACKING:
	Added notes about public/private/protected attributes

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/threads.py:
	Use new gobject-less signal system

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/Makefile.am:
	* pitivi/bin.py:
	* pitivi/plumber.py:
	* pitivi/ui/Makefile.am:
	* pitivi/ui/viewer.py:
	Move plumber up one directory, since it's not ui-specific.
	Use auto*sink instead of gconf*sink since it's now works better

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/Makefile.am:
	* pitivi/signalinterface.py:
	* tests/Makefile.am:
	* tests/test_signallable.py:
	New signallable interface

2008-10-16  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac: 
	And back to development cycle.

2008-10-15  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	* RELEASE:
	* NEWS:
	0.11.2 release "Milanesa de Lomo"

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.4 pre-release
